--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>{{ page.title }}</title>
+    <meta name="viewport" content="width=device-width">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+    <!-- syntax highlighting CSS -->
+    <link rel="stylesheet" href="/css/syntax.css">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/main.css">
 
-    </head>
-    <body>
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+      ga('create', 'UA-5078036-22', 'paradoxxxzero.github.io');
+      ga('send', 'pageview');
 
-          {{ content }}
+    </script>
+  </head>
+  <body>
+    <div class="site">
+      <div class="header">
+        <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+        <a class="extra" href="/">home</a>
+      </div>
 
-          <div class="footer">
-            <div class="contact">
-              <p>
-                paradoxxx zero<br />
-                paradoxxx.zero -> gmail.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/padoxxxzero">github.com/pardoxxxzero</a><br />
-              </p>
-            </div>
-          </div>
+      {{ content }}
+
+      <div class="footer">
+        <div class="contact">
+          <p>
+            paradoxxx zero<br />
+            paradoxxx.zero -> gmail.com
+          </p>
         </div>
-    </body>
+        <div class="contact">
+          <p>
+            <a href="https://github.com/padoxxxzero">github.com/pardoxxxzero</a><br />
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
