--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,13 @@
 
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/main.css">
@@ -25,27 +32,29 @@
     </script>
   </head>
   <body>
-    <div class="site">
-      <div class="header">
-        <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-        <a class="extra" href="/">home</a>
-      </div>
+    <nav class="navbar navbar-fixed-top" role="navigation">
+      <section class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">paradøxxx zerø</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/about">About</a></li>
+          </ul>
+        </div>
+      </section>
+    </nav>
 
+    <section class="container">
       {{ content }}
-
-      <div class="footer">
-        <div class="contact">
-          <p>
-            paradoxxx zero<br />
-            paradoxxx.zero -> gmail.com
-          </p>
-        </div>
-        <div class="contact">
-          <p>
-            <a href="https://github.com/padoxxxzero">github.com/pardoxxxzero</a><br />
-          </p>
-        </div>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
