--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,13 @@
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 
     <!-- Custom CSS -->
+    <link href="http://fonts.googleapis.com/css?family=Andika" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="/css/main.css">
-
     <!-- Google Analytics -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -38,10 +38,10 @@
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>f
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">paradøxxx zerø</a>
+          <a class="navbar-brand" href="/"><small>paradoxxx</small>zerø</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
