--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,43 @@
 body {
   padding-top: 100px;
   color: #444;
+  -webkit-filter: grayscale(0.3);
+  filter: grayscale(0.3);
+}
+
+* {
+  font-family: "Andika", sans-serif;
+}
+
+.post {
+  margin-bottom: 5em;
+}
+
+#home h2 {
+  color: transparent;
+}
+
+h1, h2, h3 {
+  color: transparent;
+  text-shadow: 0 0 1px #444;
+}
+
+h1 a, h2 a, h3 a {
+  color: transparent;
+  text-shadow: 0 0 1px #428bca;
+}
+
+h1 small, h2 small, h3 small {
+  color: transparent;
+  text-shadow: 0 0 1px #999;
+}
+
+h1 a:hover, h2 a:hover, h3 a:hover,
+h1 a:focus, h2 a:focus, h3 a:focus {
+  color: transparent;
+  text-shadow: 0 0 1px #2a6496;
+}
+
+#blogs .posts {
+  margin: 2em 0 0 2.5em;
 }
