--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width">
-
+    <!-- Atom feed -->
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/paradoxxxzero_github_io">
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
