Add butterfly post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   </h2>
 </header>
 
-<article class="post">
+<article class="post {{ page.class }}">
   {{ content }}
 </article>
 
