--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ nav.navbar {
   margin-top: 2em;
 }
 
-.post h1, .post h2, .post h3 , .post h4 , .post h5 {
+.post h1, .post h2, .post h3 , .post h4 , .post h5,
+.page h1, .page h2, .page h3 , .page h4 , .page h5 {
   margin-top: 2em;
   margin-bottom: 1em;
 }
